# rosbot_ros

.cobra_flex/: robot_core.xacro
.github/workflows/: build-docker.yaml  bump.yaml  run-tests.yaml
.obsidian/: workspace.json
.resource/motor_control_mini/: 192.168.0.44.har  cobra_flex_odom_node.py  roarm_client.py  roarm_motor_control.py  오도메트리.md
.resource/motor_control_mini/roarm_driver/: package.xml  setup.py
.resource/motor_control_mini/roarm_driver/config/: roarm.yaml
.resource/motor_control_mini/roarm_driver/launch/: teleop_bridge_launch.py
.resource/motor_control_mini/roarm_driver/roarm_driver/: teleop_bridge_node.py
src/: MANIPULATOR.md  README.md  ROS_API.md
src/doc/: 01_프로젝트_개요.md  02_패키지_구조.md  03_시스템_아키텍처.md  04_하드웨어_인터페이스.md  05_센서_통합.md  06_컨트롤러.md  07_로컬라이제이션.md  08_런치_시스템.md  09_사용_여부_정리.md  10_Cobra_Flex_적용_가이드.md  11_Cobra_Flex_적용_일정.md  index.md  용어집.md
src/docker/: .env  compose.rosbot.yaml  compose.rosbot_xl.yaml  compose.simulation.yaml
src/rosbot/: rosbot_hardware.repos  rosbot_simulation.repos
src/rosbot_bringup/launch/: bringup.launch.py
src/rosbot_controller/: package.xml  setup.py
src/rosbot_controller/launch/: controller.launch.py  manipulator.launch.py
src/rosbot_description/launch/: load_urdf.launch.py
src/rosbot_description/urdf/: rosbot.urdf.xacro  rosbot_xl.urdf.xacro
src/rosbot_gazebo/: package.xml
src/rosbot_gazebo/launch/: simulation.launch.py  spawn_robot.launch.py
src/rosbot_gazebo/test/: test_multirobot.py  test_sim.py  test_utils.py
src/rosbot_utils/: package.xml
(+13 files in other folders)
