<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roarm_driver</name>
  <version>0.1.0</version>
  <description>RoArm-M2 HTTP bridge node for teleop control</description>
  <maintainer email="khj@todo.com">khj</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
